# Customer_Satisfaction_Score-2.0

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
.dvc/: config
.zen/: config.yaml
analysis/: univariate.ipynb
data/: .gitignore  olist_customers_dataset.csv.dvc  test.csv.dvc  train.csv.dvc
src/data/: data_cleaing.py  data_ingestion.py  split_data.py
src/features/: feature_eng.py
src/pipelines/: training_pipeline.py
src/steps/: data_cleaning.py  feature_eng.py  ingest_data.py  modal_eveluation.py  modal_traning.py
