[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-satisfaction-score"  
version = "0.0.0"
description = "customer satisfaction score"
authors = [{ name = "Vinay Kanuku", email = "kanukuvinay75@gmail.com" }]

[project.urls]
"Homepage" = "https://github.com/Vinay-kanuku/Customer_Satisfaction_Score-2.0"

[project.optional-dependencies]
dev = ["pytest", "black"]
docs = ["sphinx"]